--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "^54.0.8",
     "expo-blur": "~14.1.3",
+    "expo-build-properties": "^1.0.8",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
     "expo-font": "~13.3.2",
